# bayestracking

./: CMakeLists.txt
config/: BayestrackingConfig.cmake.in  bayestracking.pc.in
examples/: CMakeLists.txt
include/bayes_tracking/: jpda.h  multitracker.h
